fixed line height on page headers when text wraps on smaller screens, fixed font size on one of the fronting subtotals

--- a/pages/accounting/accounting.module.css
+++ b/pages/accounting/accounting.module.css
@@ -89,6 +89,7 @@
 @media (max-width: 767px) {
    .pageHeader {
     font-size: 1.5em;
+    line-height: 1.5;
    }
 
    .subHeader {
