--- a/pages/accounting/accountingExampleId.module.css
+++ b/pages/accounting/accountingExampleId.module.css
@@ -41,6 +41,7 @@
 @media (max-width: 1024px) {
   .pageHeader {
     font-size: 2.5rem;
+    line-height: 1.5;
    }
 
    .subHeader {
